確認テスト_提出

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>プログラミング教材「WithCode+」</title>
-    <meta name="description" content="「人生をコードと共に」というビジョンを達成するべく、皆さんのプログラミング学習をサポートします。">
-    <meta name="keywords" content="IT,プログラミング,コミュニティ">
+    <title>ダイビングショップ「Aloha Divingshop」</title>
+    <meta name="description" content="ダイビングショップダイビングショップ">
+    <meta name="keywords" content="ダイビングショップ,ハワイ,スキューバダイビング">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="プログラミング教材「WithCode+」">
+    <meta property="og:title" content="ダイビングショップ「Aloha Divingshop」">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://withcode-plus.tech">
     <meta property="og:image" content="img/logo2.png">
-    <meta property="og:description" content="「人生をコードと共に」というビジョンを達成するべく、皆さんのプログラミング学習をサポートします。">
-    <meta property="og:site_name" content="プログラミング教材">
+    <meta property="og:description" content="ダイビングショップダイビングショップ">
+    <meta property="og:site_name" content="ダイビングショップ">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180×180" href="img/logo2.png">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -27,11 +27,16 @@
         <div class="inner">
           <nav class="header_nav">
             <ul>
-              <li><a href="#about">ABOUT<span>概要</span></a></li>
-              <li><a href="#detail">DETAIL<span>詳細</span></a></li>
-              <li><a href="#profile">PROFILE<span>紹介</span></a></li>
+              <li>
+                <a href="#about">ABOUT<span>概要</span></a>
+              </li>
+              <li><a href="#detail">DETAIL<span>コース詳細・料金</span></a></li>
+              <li><a href="#profile">PROFILE<span>スタッフ紹介</span></a></li>
               <li><a href="#brog">BROG<span>ブログ</span></a></li>
-              <li><a href="#contact">CONTACT<span>お問い合わせ</span></a></li>
+              <li>
+                <a href="#access">ACCESS<span>アクセス</span></a>
+              </li>
+              <li><a href="#contact">CONTACT<span>ご予約・お問い合わせ</span></a></li>
             </ul>
           </nav>
         </div>
@@ -42,8 +47,8 @@
       <section id="top">
         <div class="top_all">
           <div class="top_inner">
-            <h1 class="top_title">WithCode</h1>
-            <p class="top_subtitle">～人生をコードと共に～</p>
+            <h1 class="top_title">Aloha Divingshop</h1>
+            <p class="top_subtitle">～ハワイの素晴らしい海の世界～</p>
           </div>
         </div>
       </section>
@@ -51,11 +56,12 @@
       <section class="about_img section" id="about">
         <div class="inner">
           <div class="descript">
-            <h2 class="title">ABOUT<span>WithCodeについて</span></h2>
+            <h2 class="title">ABOUT<span>Aloha Divingshopについて</span></h2>
             <div class="txt">
-              <h3>WithCodeとは？</h3>
-              <p>WithCodeは、<strong>プログラミング学習者がスキル向上を目指すべく</strong>創設されたコミュニティです。多くの優秀な現役エンジニアをメンターとして迎え入れましたので、<strong>日々の学習の中で生じた疑問/質問を気軽に相談できる環境</strong>を提供します。また、<strong>週に一度の勉強会</strong>や、メンバー同士の<strong>交流を促す企画</strong>
-              なども多数ご用意しております。</p>
+              <h3>Aloha Divingshopとは？</h3>
+              <p>
+                Aloha Divingshopは、ダイビングを通じ、みなさんに<strong>「笑顔」</strong>を提供します。１人１人のお客さまを尊重し、<strong>「不安」や「緊張」を「楽しみ」と「笑顔」に変化</strong>させ、心から安心し、楽しんでいただける空間を目指しています。私たちもみなさんと一緒に楽しみながら、<strong>ハワイの素晴らしい海の世界</strong>をご紹介していきますので、どうぞ遊びにお越し下さい。
+              </p>
             </div>
           </div>
         </div>
@@ -66,9 +72,10 @@
           <div class="descript descript_right">
             <h2 class="title">CONCEPT<span>コンセプト</span></h2>
             <div class="txt">
-              <h3>新たな仲間との出会いを</h3>
+              <h3>「楽しみ」と「笑顔」</h3>
               <p>
-                WithCodeでは、<strong>切磋琢磨できる仲間</strong>との新たな出会いを大切にします。「独学でプログラミングを勉強していて、モチベーションを維持できない。」という方々が抱えている悩みを解決します。メンバー同士での交流を促す企画を積極的に行っていくので、<strong>出会うはずのなかった仲間との新たな出会い</strong>をWithCodeは提供します。</p>
+                Aloha Divingshopは、ダイビングを通じ、ハワイの海の素晴らしさを知って頂きたい、という気持ちで一人一人の<strong>お客さまのレベルに応じ</strong>、不安や緊張を取り除きながら、<strong>安全で楽しいダイビング</strong>を行っております。ダイビング未経験者、まだまだ不安な<strong>初心者ダイバー、ブランク・ダイバー</strong>でも安心してご参加いただけます。
+                
             </div>
           </div>
         </div>
@@ -76,48 +83,58 @@
       <!--DETAIL section-->
       <section class="detail section" id="detail">
         <div class="inner">
-          <h2 class="title">DETAIL<span>詳細</span></h2>
+          <h2 class="title">DETAIL<span>コース詳細・料金</span></h2>
           <div class="frame">
             <div class="txt">
-              <h3><span>コミュニティ</span>WithCode</h3>
+              <h3><span>Det License</span>ライセンス取得コース</h3>
               <p>
-                WithCodeは、<strong>プログラミング学習者がスキル向上を目指すべく</strong>創設されたコミュニティです。多くの優秀な現役エンジニアをメンターとして迎え入れましたので、<strong>日々の学習の中で生じた疑問/質問を気軽に相談できる環境</strong>を提供します。また、<strong>週に一度の勉強会</strong>や、メンバー同士の<strong>交流を促す企画</strong>
-                なども多数ご用意しております。
+                <strong>ライセンス取得に挑戦したい！</strong>本格的に始めたい！そんな方をお待ちしております。
+                帰られる日を除く<strong>２日間</strong>のご滞在で、<strong>ダイビングライセンスを取得できるコース</strong>です。 取得後は、ダイバーとして<strong>世界中の海</strong>でダイビングを楽しんでいただくことができます。
+                楽しくライセンス取得に一緒にチャレンジしましょう。
               </p>
             </div>
             <h4 class="sub_title"><span>PHOTO</span></h4>
-            <img class="photo" src="img/withcode.png" alt="withcode">
+            <img class="photo" src="test_img/ダイバー2人.jpg" alt="withcode+">
             <h4 class="sub_title"><span>PRICE</span></h4>
             <p class="price">
-              <span>￥</span><em>????</em>(税込)</p>
+              <span>￥</span><em>30,000</em>(税込)
+            </p>
+            <div class="button_1">
+              <a href="#contact">ご予約・お問い合わせ</a>
+            </div>
           </div>
           <div class="frame">
             <div class="txt">
-              <h3><span>学習教材</span>WithCode+</h3>
+              <h3><span>Discover Diving</span>体験ダイビングコース</h3>
               <p>
-                WithCode+は、<strong>既存の業界に革命を起こすべく</strong>誕生したプログラミング教材です。<strong>アウトプットの量</strong>を圧倒的に増やすことで、短期間での成長を実現します。
-                また、<strong>低価格</strong>かつ、より<strong>実務に近い学習教材</strong>を提供することで、より多くの優秀なIT人材をWithCodeから輩出していきます。「プログラミング学習は高額だ」という既存の価値観を革新します。
+                「体験」といっても、充分に楽しんでいただける<strong>本格的なダイビング</strong>です。美しい海を、めいっぱい楽しんで下さい！お客様のペースに合わせて、潜る<strong>深さは最大10ｍ</strong>まで、<strong>潜水時間は約30～40分</strong>。
+                初めてのダイビングに不安な方も、無理なく一緒に楽しみましょう！ 精いっぱいお客様のサポートをさせていただきます。
               </p>
             </div>
             <h4 class="sub_title"><span>PHOTO</span></h4>
-            <img class="photo" src="img/withcode+.png" alt="withcode+">
+            <img class="photo" src="test_img/ダイビング_集合写真.jpg" alt="withcode+">
             <h4 class="sub_title"><span>PRICE</span></h4>
-            <p class="price"><span>￥</span><em>???</em>(税込)</p>
+            <p class="price">
+              <span>￥</span><em>15,000</em>(税込)
+            </p>
+            <div class="button_1">
+              <a href="#contact">ご予約・お問い合わせ</a>
+            </div>
           </div>
         </div>
       </section>
       <!--PROFILE section-->
       <section class="profile section" id="profile">
         <div class="inner">
-          <h2 class="title">PROFILE<span>プロフィール</span></h2>
+          <h2 class="title">PROFILE<span>スタッフ紹介</span></h2>
           <div class="frame_all">
             <div class="frame_profile profile_bg">
               <div class="intro">
-                <div class="intro_img">
-                  <img src="img/logo2.png" width="80" height="80" alt="プロフィール画像">
+                <div class="intro_img_1">
+                  <img src="test_img/MAN.jpg"alt="プロフィール画像">
                 </div>
                 <div class="txt">
-                  <h3><span>エンジニア</span>〇〇〇〇</h3>
+                  <h3><span>Diver</span>James</h3>
                 </div>
               </div>
               <h4 class="sub_title">QUALIFICATION</h4>
@@ -149,21 +166,32 @@
                   </tr>
                 </table>
               </div>
+              <h4 class="sub_title">SNS</h4>
+              <div class="staff_sns">
+                <a href="https://twitter.com/withcode_tech">
+                  <img src="test_img/twitter_icon.png" alt="twitterロゴ">
+                </a>
+                <a href="https://twitter.com/withcode_tech">
+                  <img src="test_img/instagram.png" alt="インスタロゴ">
+                </a>
+              </div>
             </div>
             <div class="frame_profile profile_bg">
               <div class="intro">
-                <div class="intro_img">
-                  <img src="img/logo2.png" width="80" height="80" alt="プロフィール画像">
+                <div class="intro_img_2">
+                  <img src="test_img/WOMAN.jpg"alt="プロフィール画像">
                 </div>
                 <div class="txt">
-                  <h3><span>エンジニア</span>〇〇〇〇</h3>
+                  <h3><span>Diver</span>Emma</h3>
                 </div>
               </div>
+              <h4 class="sub_title">QUALIFICATION</h4>
               <div class="txt">
-                <p>
-                  WithCodeは、プログラミングスキルを向上をさせるべく創設されたコミュニティです。優秀な現役エンジニアのメンターを揃えましたので、日々の学習の中で生じた疑問/質問を気軽に相談できる環境を提供します。
-                  また、勉強会/交流会をなどもご用意しております。
-                </p>
+                <ul>
+                  <li>〇〇〇〇〇〇〇〇〇〇〇〇</li>
+                  <li>〇〇〇〇〇〇〇〇〇〇〇〇</li>
+                  <li>〇〇〇〇〇〇〇〇〇〇〇〇</li>
+                </ul>
               </div>
               <h4 class="sub_title"><span>HISTORY</span></h4>
               <div class="txt">
@@ -186,6 +214,15 @@
                   </tr>
                 </table>
               </div>
+              <h4 class="sub_title">SNS</h4>
+              <div class="staff_sns">
+                <a href="https://twitter.com/withcode_tech">
+                  <img src="test_img/twitter_icon.png" alt="twitterロゴ">
+                </a>
+                <a href="https://twitter.com/withcode_tech">
+                  <img src="test_img/instagram.png" alt="インスタロゴ">
+                </a>
+              </div>
             </div> 
           </div>
         </div>
@@ -197,7 +234,7 @@
           <div class="blog_block">
             <a href="https://withcode.tech">
               <div class="blog_body">
-                <img src="img/blog.png" width="300" height="180" alt="ブログ画像">
+                <img src="test_img/クマノミダイビング.jpg" width="300" height="180" alt="ブログ画像">
                 <h3>〇〇〇〇</h3>
                 <p>〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
               </div>
@@ -206,7 +243,7 @@
           <div class="blog_block">
             <a href="https://withcode.tech">
               <div class="blog_body">
-                <img src="img/blog.png" width="300" height="180" alt="ブログ画像">
+                <img src="test_img/Top_kame.png" width="300" height="180" alt="ブログ画像">
                 <h3>〇〇〇〇</h3>
                 <p>〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
               </div>
@@ -215,7 +252,16 @@
           <div class="blog_block">
             <a href="https://withcode.tech">
               <div class="blog_body">
-                <img src="img/blog.png" width="300" height="180" alt="ブログ画像">
+                <img src="test_img/クマノミ.jpg" width="300" height="180" alt="ブログ画像">
+                <h3>〇〇〇〇</h3>
+                <p>〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
+              </div>
+            </a>
+          </div>
+          <div class="blog_block">
+            <a href="https://withcode.tech">
+              <div class="blog_body_1">
+                <img src="test_img/ダイバー2人.jpg" alt="ブログ画像">
                 <h3>〇〇〇〇</h3>
                 <p>〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
               </div>
@@ -224,7 +270,7 @@
           <div class="blog_block">
             <a href="https://withcode.tech">
               <div class="blog_body">
-                <img src="img/blog.png" width="300" height="180" alt="ブログ画像">
+                <img src="test_img/ダイビング_集合写真.jpg"  width="300" height="180" alt="ブログ画像">
                 <h3>〇〇〇〇</h3>
                 <p>〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
               </div>
@@ -233,16 +279,7 @@
           <div class="blog_block">
             <a href="https://withcode.tech">
               <div class="blog_body">
-                <img src="img/blog.png" width="300" height="180" alt="ブログ画像">
-                <h3>〇〇〇〇</h3>
-                <p>〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
-              </div>
-            </a>
-          </div>
-          <div class="blog_block">
-            <a href="https://withcode.tech">
-              <div class="blog_body">
-                <img src="img/blog.png" width="300" height="180" alt="ブログ画像">
+                <img src="test_img/熱帯魚.jpg" width="300" height="180" alt="ブログ画像">
                 <h3>〇〇〇〇</h3>
                 <p>〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
               </div>
@@ -250,18 +287,48 @@
           </div>
         </div>
       </section>
+      <!--ACCESS section-->
+      <section class="access section" id="access">
+        <div class="inner">
+          <h2 class="title">ACCESS<span>アクセス</span></h2>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24682.562154614785!2d-157.84135904210754!3d21.272933718598857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c00727436e6a8ad%3A0x6afcce337172ca06!2z44Ov44Kk44Kt44Kt5rW35bK4!5e0!3m2!1sja!2sjp!4v1626244655656!5m2!1sja!2sjp"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+          </iframe>
+        </div>  
+      </section>
       <!--CONTACT sectiion-->
-      <section id="contact">
-        <div class="button">
-          <a href="https://withcode.tech">ご相談・お問い合わせ</a>
+      <section class="contact section" id="contact">
+        <div class="inner">
+          <h2 class="title">CONTACT<span>ご予約・お問い合わせ</span>
+          </h2>
+          <form class="form" method="post">
+            <div>
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="user_name">
+            </div>
+            <div>
+              <label for="mail">E-mail:</label>
+              <input type="email" id="mail" name="user_mail">
+            </div>
+            <div>
+              <label for="tel">Tell:</label>
+              <input type="tel" id="tel" name="user_tel">
+            </div>
+            <div>
+              <label for="msg">Message:</label>
+              <textarea id="msg" name="user_message"></textarea>
+            </div>
+            <div class="button">
+              <a href="https://withcode.tech">送信</a>
+            </div>
+          </form>
         </div>
       </section>
     </main>
     <footer class="bottom">
-      <div class="footer_logo">
-        <a href="#">
-          <img src="img/logo1.png" alt="withcodeロゴ">
-        </a>
+      <div class="footer_txt">
+        <h3>Aloha Divingshop</h3>
       </div>
       <ul class="footer_sns">
         <li>
@@ -271,7 +338,7 @@
         </li>
       </ul>
       <div class="copyright">
-        <p>WithCode 2021</p>
+        <p>Aloha Divingshop 2021</p>
       </div>
     </footer>
   </body>
